--- a/aboutus.html
+++ b/aboutus.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 
@@ -10,7 +9,7 @@
     <a href="aboutus.html">about us</a>
     <a href=""></a>
 
-    <img src="images/bg.png" alt="air university logo" width="30%">
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/61/Air_University_Pakistan_Insignia.png" alt="air university logo">
     <h1>In the name of Allah</h1>
  <p> some text goes here </p>
 <ul>
