--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="aboutus.html">about us</a>
     <a href=""></a>
 
-    <img src="images/bg.png" alt="air university logo" width="30%">
+    <img src="images/airuni.png" alt="air university logo" width="30%">
     <h1>In the name of Allah</h1>
  <p> some text goes here </p>
 <ul>
@@ -23,12 +23,6 @@
         <li>item </li>
 </ol>
 <hr/>
-
-
-
 </body>
-
-
-
 
 </html>
